--- a/src/components/List.module.css
+++ b/src/components/List.module.css
@@ -5,17 +5,17 @@
   align-content: center;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 4px solid #eee;
+  border-bottom: 0.5px solid #00a5e0;
   text-transform: uppercase;
-  padding: 5px;
+  padding: 0px;
   margin: 10px;
 }
 
 .title {
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 .date {
-  font-size: 0.5rem;
+  font-size: 1rem;
   text-indent: 10px;
 }
